cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  CloudFormation Template for Roman Numerals Converter Application. 
  This template creates Python Flask Web Application on Amazon Linux 2023  
  EC2 Instance with custom security group allowing http connections on port 80, 8080 and SSH connection on port 22. 
  Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.

Parameters:

  vpcID:
    Description: Choose your VPC
    Type: AWS::EC2::VPC::Id

  myKeyPair:
    Description: Choose your keyname
    Type: AWS::EC2::KeyPair::KeyName

  myInstanceType:
    Description: Chose your instance type
    Type: String
    Default: t2.micro
    AllowedValues:
       - t2.micro
       - t3.micro
       - t2.nano
  
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'

Resources:

  myInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref myInstanceType
      KeyName: !Ref myKeyPair
      SecurityGroupIds: 
        - !Ref webServerSecGroup
      Tags: 
        - Key: Name
          Value: !Sub Webser of ${AWS::StackName}
      UserData: !Base64 |
        #! /bin/bash
        dnf update -y
        dnf install python3 -y
        dnf install python3-pip -y
        pip3 install flask
        dnf install git -y
        cd /home/ec2-user
        FOLDER="https://raw.githubusercontent.com/Demirkol14/roman-number-converter/main"
        wget -P templates ${FOLDER}/templates/index.html
        wget -P templates ${FOLDER}/templates/result.html
        wget ${FOLDER}/roman-numerals-converter-app.py
        python3 roman-numerals-converter-app.py
      
  webServerSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH, http and 8080
      SecurityGroupIngress: 
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80

        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22

        - CidrIp: 0.0.0.0/0
          FromPort: 8080
          IpProtocol: tcp
          ToPort: 8080

      Tags: 
        - Key: Name
          Value: deco-roman-number-converter
      VpcId: !Ref vpcID

Outputs:
  webServerDNS:
    Description: Gives the URL of Webserver
    Value: !Sub
      - http://${PIA}:8080
      - PIA: !GetAtt myInstance.PublicDnsName
